--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         
         <header>
             <div class="profile-title">
-                SUPORTE TÉCNICO <span>& TI</span>
+                SUPORTE <span>& TI</span>
             </div>
             <div class="profile-subtitle">
                 Mauricio Costa
@@ -213,7 +213,7 @@
         </header>
 
         <section class="hook-box">
-            <div class="hook-title">DESEJA SUPORTE PARA SEU PC OU UM SITE PARA SEU NEGÓCIO? VENHA CONHECER</div>
+            <div class="hook-title">CONHEÇA OS SERVIÇOS PRESTADOS</div>
         </section>
 
         <section class="methods-box">
