ajuste de texto

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
                 <div id="content-entrega" style="display: none;">
                     <h3 class="modal-title"><i class="fa-solid fa-truck-fast"></i> Busca e Entrega</h3>
-                    <p class="modal-text">Para reparos físicos complexos. Retiro seu equipamento, levo para meu laboratório especializado onde tenho todas as ferramentas, e devolvo pronto.</p>
+                    <p class="modal-text">Para reparos físicos complexos. Retiro seu equipamento, levo para meu laboratório onde tenho todas as ferramentas, e devolvo pronto.</p>
                     <ul class="modal-features">
                         <li><i class="fa-solid fa-check"></i> Laboratório equipado e seguro.</li>
                         <li><i class="fa-solid fa-check"></i> Testes de stress profundos.</li>
@@ -282,7 +282,7 @@
                 <div class="service-content">
                     <ul>
                         <li><strong>Formatação Completa</strong> Configuração e otimização de Windows/Linux.</li>
-                        <li><strong>Backup de Dados</strong> Salve seus arquivos antes de formatar.</li>
+                        <li><strong>Backup de Dados</strong> Protejo seus arquivos antes de formatar.</li>
                         <li><strong>Programas</strong> Instalação de Office, Drivers e programas essenciais.</li>
                         <li><strong>Remoção de Vírus</strong> Limpeza profunda do sistema.</li>
                     </ul>
